--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -1,388 +1,47 @@
-@{ ViewData["Title"] = "Modulo"; }
+@model IEnumerable<webmva.Models.Modulo>
 
-<div class="col-md-2 sidebar">
-    <div class="row">
-        <!-- uncomment code for absolute positioning tweek see top comment in css -->
-        <div class="absolute-wrapper"> </div>
-        <!-- Menu -->
-        <br>
-        <div class="side-menu col-6">
-            <nav class="navbar navbar-default" role="navigation">
-                <!-- Main Menu -->
-                <div class="side-menu-container">
-                    <ul class="nav navbar-nav" style="list-style-type:none">
-                        <!-- Dropdown-->
-                        <a>
-                            <li class="panel-default" id="progetto">
-                                <span class="glyphicon glyphicon-barcode"></span>
-                                <strong> MODULO</strong>
-                        </a>
+@{
+    ViewData["Title"] = "Lista moduli";
+}
 
-                        <!-- Dropdown level 1-->
-                        <div id="dropdown-lvl1" class="panel-collapse">
-                            <div class="panel-body">
-                                <ul class="panel-default" style="list-style-type:none; margin-left:-40px">
-                                    <li>
-                                        <a data-toggle="collapse" data-target="#apriNmap">Nmap scan</a>
-                                    </li>
-                                    <br>
-                                    <li>
-                                        <a data-toggle="collapse" data-target="#apriNessus">Nessus scan</a>
-                                    </li>
-                                    <br>
-                                    <li>
-                                        <a data-toggle="collapse" data-target="#apriOpenVAS">OpenVAS scan</a>
-                                    </li>
-                                    <br>
+<h2>Index</h2>
 
-
-                                </ul>
-
-                            </div>
-                        </div>
-                        </li>
-
-
-
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </nav>
-
-        </div>
-    </div>
-</div>
-
-<div class="col-6 col-md-10">
-
-    <br>
-
-    <div class="col-5">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <a data-toggle="collapse" data-target="#apriNmap">
-                    <strong>
-                        NMAP SCAN
-                    </strong>
-                    <span class="caret"></span>
-                </a>
-
-            </div>
-            <div id="apriNmap" class="col-5">
-                <div class="panel-body">
-                    <h4>
-                        <strong> Configura modulo </strong>
-                    </h4>
-                    <hr>
-                    <form>
-                        <label>Nome</label>
-                        <div class="panel panel-default">
-                            <input type="text" class="form-control" id="nomeModulo" name="nomeModulo">
-                        </div>
-                    </form>
-                </div>
-                <div class="panel-body">
-                    <div class="col-6">
-                        <form>
-                            <label>Opzioni</label>
-                            <div class="panel panel-default">
-                                <div class="panel-body form-horizontal payment-form">
-                                    <div class="form-check">
-                                        <label>
-                                            <input type="radio" id="pingScan" name="nmap" value="-sn">
-                                            <span class="label-text">ping scan </span>
-                                        </label>
-                                    </div>
-                                    <div class="form-check">
-                                        <label>
-                                            <input type="radio" id="scanVeloce" name="nmap" value="-T4 -F">
-                                            <span class="label-text"></span> scan veloce</span>
-                                        </label>
-                                    </div>
-                                    <div class="form-check">
-                                        <label>
-                                            <input type="radio" id="scanIntenso" name="nmap" value="-T4 -A -v">
-                                            <span class="label-text">scan intenso</span>
-                                        </label>
-                                    </div>
-                                    <div class="form-check">
-                                        <label>
-                                            <input type="radio" id="porteUDP" name="nmap" value="-sS -sU">
-                                            <span class="label-text"> porte UDP</span>
-                                        </label>
-                                    </div>
-                                    <div class="form-check">
-                                        <label>
-                                            <input type="radio" id="allTCP" name="nmap" value="-p 1-65535">
-                                            <span class="label-text">tutte le porte TCP</span>
-                                        </label>
-                                    </div>
-                                    <br>
-                                    <input type="text" class="form-control" id="ciao" name="ciao">
-                                    <br>
-                                    <div class="col text-right">
-                                        <button type="button" class="btn btn-default preview-add-button">
-                                            <span class="glyphicon glyphicon-plus"></span>
-                                            <span data-toggle="modal" data-target="#confermaModulo" href="">
-                                                <strong> conferma </strong>
-                                            </span>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <a data-toggle="collapse" data-target="#apriNessus">
-                    <strong>
-                        NESSUS SCAN
-                    </strong>
-                    <span class="caret"></span>
-                </a>
-
-            </div>
-
-            <div id="apriNessus" class="col-5">
-                <div class="panel-body">
-                    <h4>
-                        <strong> Configura modulo </strong>
-                    </h4>
-                    <hr>
-                    <form>
-                        <label>Nome</label>
-                        <div class="panel panel-default">
-                            <input type="text" class="form-control" id="nomeModulo" name="nomeModulo">
-                        </div>
-                    </form>
-                </div>
-                <div class="panel-body">
-                    <div class="col-6">
-                        <form>
-                            <label>Opzioni</label>
-                            <div class="panel panel-default">
-                                <div class="panel-body form-horizontal payment-form">
-                                    <div class="form-check">
-                                        <label>
-                                            <input type="radio" id="pingScan" name="nmap" value="-sn">
-                                            <span class="label-text">ping scan </span>
-                                        </label>
-                                    </div>
-                                    <div class="form-check">
-                                        <label>
-                                            <input type="radio" id="scanVeloce" name="nmap" value="-T4 -F">
-                                            <span class="label-text"></span> scan veloce</span>
-                                        </label>
-                                    </div>
-                                    <div class="form-check">
-                                        <label>
-                                            <input type="radio" id="scanIntenso" name="nmap" value="-T4 -A -v">
-                                            <span class="label-text">scan intenso</span>
-                                        </label>
-                                    </div>
-                                    <div class="form-check">
-                                        <label>
-                                            <input type="radio" id="porteUDP" name="nmap" value="-sS -sU">
-                                            <span class="label-text"> porte UDP</span>
-                                        </label>
-                                    </div>
-                                    <div class="form-check">
-                                        <label>
-                                            <input type="radio" id="allTCP" name="nmap" value="-p 1-65535">
-                                            <span class="label-text">tutte le porte TCP</span>
-                                        </label>
-                                    </div>
-                                    <br>
-                                    <input type="text" class="form-control" id="ciao" name="ciao">
-                                    <br>
-                                    <div class="col text-right">
-                                        <button type="button" class="btn btn-default preview-add-button">
-                                            <span class="glyphicon glyphicon-plus"></span>
-                                            <span data-toggle="modal" data-target="#confermaModulo" href="">
-                                                <strong> conferma </strong>
-                                            </span>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <a data-toggle="collapse" data-target="#apriOpenVAS">
-                <strong>
-                    OPENVAS SCAN
-                </strong>
-                <span class="caret"></span>
-            </a>
-
-        </div>
-        <div id="apriOpenVAS" class="col-5">
-            <div class="panel-body">
-                <h4>
-                    <strong> Configura modulo </strong>
-                </h4>
-                <hr>
-                <form>
-                    <label>Nome</label>
-                    <div class="panel panel-default">
-                        <input type="text" class="form-control" id="nomeModulo" name="nomeModulo">
-                    </div>
-                </form>
-            </div>
-            <div class="panel-body">
-                <div class="col-6">
-                    <form>
-                        <label>Opzioni</label>
-                        <div class="panel panel-default">
-                            <div class="panel-body form-horizontal payment-form">
-                                <div class="form-check">
-                                    <label>
-                                        <input type="radio" id="pingScan" name="nmap" value="-sn">
-                                        <span class="label-text">ping scan </span>
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <label>
-                                        <input type="radio" id="scanVeloce" name="nmap" value="-T4 -F">
-                                        <span class="label-text"></span> scan veloce</span>
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <label>
-                                        <input type="radio" id="scanIntenso" name="nmap" value="-T4 -A -v">
-                                        <span class="label-text">scan intenso</span>
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <label>
-                                        <input type="radio" id="porteUDP" name="nmap" value="-sS -sU">
-                                        <span class="label-text"> porte UDP</span>
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <label>
-                                        <input type="radio" id="allTCP" name="nmap" value="-p 1-65535">
-                                        <span class="label-text">tutte le porte TCP</span>
-                                    </label>
-                                </div>
-                                <br>
-                                <input type="text" class="form-control" id="ciao" name="ciao">
-                                <br>
-                                <div class="col text-right">
-                                    <button type="button" class="btn btn-default preview-add-button">
-                                        <span class="glyphicon glyphicon-plus"></span>
-                                        <span data-toggle="modal" data-target="#confermaModulo" href="">
-                                            <strong> conferma </strong>
-                                        </span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-</div>
-</div>
-<div class="modal fade" id="confermaModulo" tabindex="-1" role="dialog" aria-labelledby="none" aria-hidden="true" data-backdrop="static"
-    data-keyboard="false">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3 class="modal-title">
-                    <strong>Nuovo Modulo NMAP</strong>
-                </h3>
-            </div>
-            <div class="modal-body">
-
-                <!-- content goes here -->
-                <form>
-                    <div class="form-group">
-                        <label for="name">Nome</label>
-                        <input type="text" class="form-control" id="nome" placeholder="nome del progetto">
-                    </div>
-                </form>
-            </div>
-
-            <div class="modal-footer">
-                <div class="btn-group btn-group-justified" role="group" aria-label="group button">
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default" data-dismiss="modal" role="button" data-toggle="modal" data-target="#chiusuraModulo">Cancella</button>
-                    </div>
-
-                    <div class="btn-group" role="group">
-                        <!--<button type="button" id="Modulo" class="btn btn-default " data-action="save" role="button" onclick="location.href='@Url.Action("Index ", "Modulo ")'; return false;">Salva</button>-->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="chiusuraModulo" class="modal fade in">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-            </div>
-            <div class="modal-body">
-                <h4>
-                    <strong>Confermi di chiudere questo progetto?</strong>
-                </h4>
-            </div>
-            <div class="modal-footer">
-                <div class="btn-group" role="group">
-                    <button class="btn btn-default" data-dismiss="modal">SI</button>
-                    <button class="btn btn-default" data-target="#confermaModulo" data-toggle="modal" data-dismiss="modal"> NO</button>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.modal-content -->
-    </div>
-    <!-- /.modal-dalog -->
-</div>
-
-@section scripts{
-<script>
-    $(function () {
-        //seleziona scanner
-        //$('input[name=nmap]:first').attr('checked', true);   //Setta il tipo di scanner    
-        $('input[name=nmap]').change(function () {
-            // change the page per this logic
-            switch ($('input[name=nmap]:checked').val()) {
-                case '-sn':
-                    $('#ciao').val('nmap -sn');
-                    break;
-                case '-T4 -F':
-                    $('#ciao').val('nmap -T4 -F'); break;
-                case '-T4 -A -v':
-                    $('#ciao').val('nmap -T4 -A -v'); break;
-                case '-sS -sU':
-                    $('#ciao').val('nmap -sS -sU'); break;
-                case '-p 1-65535':
-                    $('#ciao').val('nmap -p 1-65535'); break;
-                case ' ':
-                    break;
-                default:
-                    $('#ciao').val('nmap');
-            };
-        }).change();
-    });
-
-    $(function () {
-
-
-        $('#ciao').keyup(function () {
-            $('input[name=nmap]').removeAttr('checked');
-        });
-    });
-</script> }
+<p>
+    <a asp-action="Create">Crea nuovo Modulo</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Comando)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Tipo)
+                </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nome)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Comando)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tipo)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
+                <a asp-action="Details" asp-route-id="@item.ID">Dettagli</a> |
+                <a asp-action="Delete" asp-route-id="@item.ID">Elimina</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
