--- a/Views/Modulo/Details.cshtml
+++ b/Views/Modulo/Details.cshtml
@@ -1,10 +1,10 @@
 @model webmva.Models.Modulo
 
 @{
-    ViewData["Title"] = "Dettagli modulo";
+    ViewData["Title"] = "Details";
 }
 
-<h2>Dettagli</h2>
+<h2>Details</h2>
 
 <div>
     <h4>Modulo</h4>
@@ -28,9 +28,15 @@
         <dd>
             @Html.DisplayFor(model => model.Tipo)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Applicazione)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Applicazione)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Modifica</a> |
-    <a asp-action="Index">Torna alla lista dei moduli</a>
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
