--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,14 +21,18 @@
 <body id="page-top">
 
     <nav class="navbar navbar-default navbar-fixed-top">
-
+        <div>
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class=" navbar-header page-scroll">
-            <a class="navbar-brand page-scroll" href="/">
+            <a class="navbar-brand page-scroll" >
                 <strong> WEBMVA</strong>
+            </a></div>
+            <div class="offset-md-4" style="float:right">
+        <a class="navbar-brand page-scroll" href="/" >
+               <strong>Home</strong> 
             </a>
+            </div>
         </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
         <!--  <div class="col-12 col-md-8 align-self-start">
                 <div class="col-sm-6">
