--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -28,10 +28,10 @@
                                             <a data-toggle="modal" data-target="#nuovoProgetto" href="">nuovo progetto </a>
                                         </li>
                                         <li>
-                                            <a href="/visualizzaProgetto">visualizza progetti recenti</a>
+                                            <a href="/Visualizza">visualizza progetti recenti</a>
                                         </li>
                                         <li>
-                                            <a href="/visualizzaProgetto">visualizza progetti</a>
+                                            <a href="/Progetto">visualizza progetti</a>
                                         </li>
 
 
@@ -52,10 +52,10 @@
                                 <div class="panel-body">
                                     <ul class="panel-default">
                                         <li>
-                                            <a href="/Modulo">nuovo modulo</a>
+                                            <a href="/Modulo/Create">nuovo modulo</a>
                                         </li>
                                         <li>
-                                            <a href="/Visualizza">visualizza moduli</a>
+                                            <a href="/Modulo">visualizza modulo</a>
                                         </li>
                                         <li>
                                             <a href="">Link</a>
@@ -173,28 +173,28 @@
                     <span aria-hidden="true">×</span>
                     <span class="sr-only">Close</span>
                 </button>-->
+
                 <h3 class="modal-title" id="lineModalLabel">
-                    <strong>Nuovo Progetto</strong>
+                    <strong>
+                        <p name="Progetto">Nuovo Progetto</strong>
                 </h3>
             </div>
             <div class="modal-body">
                 <!-- content goes here -->
-                <form>
+                <form id="settaggio">
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input type="text" class="form-control" id="nome" placeholder="nome del progetto">
+                        <input type="text" class="form-control" id="nome" name="nome" placeholder="nome del progetto">
                     </div>
                     <div class="fcol-xs-6 form-group">
-                        <label for="data">Data</label>
-                        <input type="date" class="form-control" id="data" placeholder="data">
+                        <label for="oggi">Data</label>
+                        <input type="data" class="form-control" id="oggi" name="oggi" placeholder="" onclick="dataOggi()">
                     </div>
                     <!-- CREARE UN CODICE IN BASE AL NOME DEL PROGETTO E ALLA DATA-->
-                    <div class="col-xs-3 form-group">
-                        <button typer="button" class="btn btn-default" on-click="generaCodice()">Genera codice
-                        </button>
-                    </div>
-                    <div class="col-md-8 form-group">
-                        <input type="text" class="form-control" id="nome" placeholder="codice">
+
+                    <div class="col-md-8 form-group" style="text-align:left">
+
+                        <input type="text" class="form-control" id="codice" name="codice" placeholder="codice" onclick="creaCodice()">
                     </div>
                     <br>
 
@@ -213,7 +213,9 @@
                     </div>
 
                     <div class="btn-group" role="group">
-                        <a asp-area="" asp-controller="Visualizza" asp-action="Index"><button type="button" class="btn btn-default " data-action="save" role="button">Salva</button></a>
+                        <a asp-area="" asp-controller="Visualizza" asp-action="Index">
+                            <button type="button" class="btn btn-default " data-action="save" role="button">Salva</button>
+                        </a>
 
                     </div>
                 </div>
@@ -233,7 +235,7 @@
             </div>
             <div class="modal-footer">
                 <div class="btn-group" role="group">
-                    <button class="btn btn-default" data-dismiss="modal">SI</button>
+                    <button onclick="document.getElementById('settaggio').reset()" class="btn btn-default" data-dismiss="modal" type="submit">SI</button>
                     <button class="btn btn-default" data-target="#nuovoProgetto" data-toggle="modal" data-dismiss="modal"> NO</button>
                 </div>
             </div>
@@ -244,16 +246,43 @@
     <!-- /.modal-dalog -->
 </div>
 <!-- /.modal -->
-
 @section scripts{
 <script>
-    $(function generaCodice()  {
-        var nome = document.getElementById("nome");  
-        var data = document.getElementById("data");   
-        //--var codice = (nome.slice(1,3)+data.slice(0,3));
-        var codice = nome.concatenate(data).using(_);
-        document.write(codice);
-   
-});
+    function creaCodice() {
+
+        var nome = $('input[name=nome]').val();
+        var oggi = $('input[name=oggi]').val();
+        var codice = oggi + "_" + nome;
+
+        $('input[name=codice]').val(codice);
+
+    };
+    function dataOggi() {
+        var oggi = new Date();
+        var dd = oggi.getDate();
+        var mm = oggi.getMonth() + 1; //January is 0!
+        var yyyy = oggi.getFullYear();
+        var hh = oggi.getHours();
+        var ff = oggi.getMinutes();
+
+        if (dd < 10) {
+            dd = '0' + dd
+        }
+
+        if (mm < 10) {
+            mm = '0' + mm
+        }
+        if (hh < 10) {
+            hh = '0' + hh
+        }
+        if (ff < 10) {
+            ff = '0' + ff
+        }
+
+        oggi = mm + '/' + dd + '/' + yyyy + '_' + hh + ':' + ff;
+        $('input[name=oggi]').val(oggi);
+        $('input[name=Progetto]').val(oggi);
+    };
+    
 
 </script> }
