Modifiche gitignore anche su GitHub

--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -1,4 +1,5 @@
-@model webmva.Models.Modulo @{ ViewData["Title"] = "Create"; }
+@model webmva.Models.Modulo
+@{ ViewData["Title"] = "Create"; }
 <div class="col-md-2 sidebar">
     <div class="row">
         <!-- uncomment code for absolute positioning tweek see top comment in css -->
@@ -201,7 +202,7 @@
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
-                <a data-toggle="collapse" data-target="#apriOpenVAS">
+                <a href="#" data-toggle="collapse" data-target="#apriOpenVAS">
                     <strong>
                         OPENVAS SCAN
                     </strong>
