--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -1,46 +1,37 @@
-@model webmva.Models.Modulo
+@model webmva.Models.Modulo 
+@{ ViewData["Title"] = "Edit"; }
 
-@{
-    ViewData["Title"] = "Edit";
-}
-
-<h2>Edit</h2>
-
-<h4>Modulo</h4>
+<h2>Modifica modulo</h2>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID" />
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+<div class="col-md-10">
+    <form asp-action="Edit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="ID" />
+    <div class="panel panel-default col-lg-10">
+        <div class="form-group">
+            <div class="panel-body">
+                <label>Nome</label>
+                
+                    <input type="text" class="form-control" asp-for="Nome" asp-validation-for="Nome">
+                
             </div>
-            <div class="form-group">
-                <label asp-for="Comando" class="control-label"></label>
-                <input asp-for="Comando" class="form-control" />
-                <span asp-validation-for="Comando" class="text-danger"></span>
+            <div class="panel-body ">
+                    <label>Comando</label>
+                    <input type="text" class="form-control " asp-for="Comando" asp-validation-for="Comando">
+                    <br>
+                    <div class="col text-right">
+                        <div class="form-group">
+                            <input type="submit" value="Save" class="btn btn-default" />
+                            <a asp-action="Index">Back to List</a>
+                        </div>
+
+                    </div>
+
+               
             </div>
-            <div class="form-group">
-                <label asp-for="Tipo" class="control-label"></label>
-                <select asp-for="Tipo" class="form-control"></select>
-                <span asp-validation-for="Tipo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Applicazione" class="control-label"></label>
-                <select asp-for="Applicazione" class="form-control"></select>
-                <span asp-validation-for="Applicazione" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+        </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
-
+</div>
